New feature, trajectory manager alanalize      speed      trajectory      smoothed direction